Correct total time and inactive time

--- a/notebooks/LevelsOfActivity.ipynb
+++ b/notebooks/LevelsOfActivity.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,11 +41,168 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>group</th>\n",
+       "      <th>user</th>\n",
+       "      <th>task_id</th>\n",
+       "      <th>metric</th>\n",
+       "      <th>value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>4fe25833f555e9903d2bb6bbeec3fbfb</td>\n",
+       "      <td>0157bc278747755031338f18c5ba4233</td>\n",
+       "      <td>1. One Box</td>\n",
+       "      <td>timeTotal</td>\n",
+       "      <td>103.260905</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>4fe25833f555e9903d2bb6bbeec3fbfb</td>\n",
+       "      <td>0157bc278747755031338f18c5ba4233</td>\n",
+       "      <td>2. Separated Boxes</td>\n",
+       "      <td>timeTotal</td>\n",
+       "      <td>215.269197</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>4fe25833f555e9903d2bb6bbeec3fbfb</td>\n",
+       "      <td>0157bc278747755031338f18c5ba4233</td>\n",
+       "      <td>3. Rotate a Pyramid</td>\n",
+       "      <td>timeTotal</td>\n",
+       "      <td>84.300881</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>4fe25833f555e9903d2bb6bbeec3fbfb</td>\n",
+       "      <td>0157bc278747755031338f18c5ba4233</td>\n",
+       "      <td>4. Match Silhouettes</td>\n",
+       "      <td>timeTotal</td>\n",
+       "      <td>998.036919</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>4fe25833f555e9903d2bb6bbeec3fbfb</td>\n",
+       "      <td>0157bc278747755031338f18c5ba4233</td>\n",
+       "      <td>5. Removing Objects</td>\n",
+       "      <td>timeTotal</td>\n",
+       "      <td>237.400799</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>74923</td>\n",
+       "      <td>e6af7d42084352a39449e6d0a09b18cd</td>\n",
+       "      <td>ffa946ca09448817699cabbb3dd78d56</td>\n",
+       "      <td>Sugar Cones</td>\n",
+       "      <td>ws-check_solution</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>74924</td>\n",
+       "      <td>e6af7d42084352a39449e6d0a09b18cd</td>\n",
+       "      <td>ffa946ca09448817699cabbb3dd78d56</td>\n",
+       "      <td>Tall and Small</td>\n",
+       "      <td>ws-check_solution</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>74925</td>\n",
+       "      <td>e6af7d42084352a39449e6d0a09b18cd</td>\n",
+       "      <td>ffa946ca09448817699cabbb3dd78d56</td>\n",
+       "      <td>Unnecessary</td>\n",
+       "      <td>ws-check_solution</td>\n",
+       "      <td>3.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>74926</td>\n",
+       "      <td>e6af7d42084352a39449e6d0a09b18cd</td>\n",
+       "      <td>ffa946ca09448817699cabbb3dd78d56</td>\n",
+       "      <td>Warm Up</td>\n",
+       "      <td>ws-check_solution</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>74927</td>\n",
+       "      <td>e6af7d42084352a39449e6d0a09b18cd</td>\n",
+       "      <td>ffa946ca09448817699cabbb3dd78d56</td>\n",
+       "      <td>Zzz</td>\n",
+       "      <td>ws-check_solution</td>\n",
+       "      <td>2.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>74928 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                  group                              user  \\\n",
+       "0      4fe25833f555e9903d2bb6bbeec3fbfb  0157bc278747755031338f18c5ba4233   \n",
+       "1      4fe25833f555e9903d2bb6bbeec3fbfb  0157bc278747755031338f18c5ba4233   \n",
+       "2      4fe25833f555e9903d2bb6bbeec3fbfb  0157bc278747755031338f18c5ba4233   \n",
+       "3      4fe25833f555e9903d2bb6bbeec3fbfb  0157bc278747755031338f18c5ba4233   \n",
+       "4      4fe25833f555e9903d2bb6bbeec3fbfb  0157bc278747755031338f18c5ba4233   \n",
+       "...                                 ...                               ...   \n",
+       "74923  e6af7d42084352a39449e6d0a09b18cd  ffa946ca09448817699cabbb3dd78d56   \n",
+       "74924  e6af7d42084352a39449e6d0a09b18cd  ffa946ca09448817699cabbb3dd78d56   \n",
+       "74925  e6af7d42084352a39449e6d0a09b18cd  ffa946ca09448817699cabbb3dd78d56   \n",
+       "74926  e6af7d42084352a39449e6d0a09b18cd  ffa946ca09448817699cabbb3dd78d56   \n",
+       "74927  e6af7d42084352a39449e6d0a09b18cd  ffa946ca09448817699cabbb3dd78d56   \n",
+       "\n",
+       "                    task_id             metric       value  \n",
+       "0                1. One Box          timeTotal  103.260905  \n",
+       "1        2. Separated Boxes          timeTotal  215.269197  \n",
+       "2       3. Rotate a Pyramid          timeTotal   84.300881  \n",
+       "3      4. Match Silhouettes          timeTotal  998.036919  \n",
+       "4       5. Removing Objects          timeTotal  237.400799  \n",
+       "...                     ...                ...         ...  \n",
+       "74923           Sugar Cones  ws-check_solution    1.000000  \n",
+       "74924        Tall and Small  ws-check_solution    1.000000  \n",
+       "74925           Unnecessary  ws-check_solution    3.000000  \n",
+       "74926               Warm Up  ws-check_solution    1.000000  \n",
+       "74927                   Zzz  ws-check_solution    2.000000  \n",
+       "\n",
+       "[74928 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "levelsOfActivity"
    ]
@@ -85,7 +242,7 @@
     "    #indicate the index variable                                                                                                                                                               \n",
     "    activity_by_user.index = activity_by_user['group_user_task_id'].values\n",
     "    \n",
-    "    typeEvents = ['ws-snapshot','ws-paint', 'ws-rotate_view','ws-move_shape','ws-rotate_shape' ,'ws-scale_shape','ws-create_shape','ws-delete_shape','ws-undo_action','ws-redo_action', 'ws-check_solution']\n",
+    "    typeEvents = ['ws-puzzle_started', 'ws-snapshot','ws-paint', 'ws-rotate_view','ws-move_shape','ws-rotate_shape' ,'ws-scale_shape','ws-create_shape','ws-delete_shape','ws-undo_action','ws-redo_action', 'ws-check_solution']\n",
     "    \n",
     "   \n",
     "        \n",
@@ -114,6 +271,7 @@
     "        # Computing active time\n",
     "        previousEvent = None\n",
     "        theresHoldActivity = 60 # np.percentile(allDifferences, 98) is 10 seconds\n",
+    "        limit = 3600\n",
     "        activeTime = []\n",
     "        \n",
     "        user_events = dataEvents[dataEvents['group_user_id'] == user]\n",
@@ -131,8 +289,14 @@
     "                #create id: group+user+task_id                                                                              \n",
     "                user_puzzle_key = event['group'] + '~' + event['user'] + '~' + json.loads(event['data'])['task_id']\n",
     "                \n",
-    "                #if(user_puzzle_key not in eventInitial.keys()):\n",
-    "                eventInitial[user_puzzle_key] = event['time']\n",
+    "                if(user_puzzle_key not in totalTime.keys()):\n",
+    "                    totalTime[user_puzzle_key] = 0\n",
+    "                    \n",
+    "                delta_seconds = (event['time'] - previousEvent['time']).total_seconds()\n",
+    "                if((delta_seconds < limit)):\n",
+    "                    totalTime[user_puzzle_key] += delta_seconds\n",
+    "                previousEvent = event\n",
+    "                \n",
     "                       \n",
     "                # initialize if the id is new                                                                              \n",
     "                if(user_puzzle_key not in puzzleEvents.keys()):\n",
@@ -144,6 +308,8 @@
     "                    globalTypesEvents[user_puzzle_key] = dict()\n",
     "                    for ev in typeEvents:\n",
     "                        globalTypesEvents[user_puzzle_key][ev]= 0\n",
+    "                        \n",
+    "                       \n",
     "            \n",
     "            # the event is not final event\n",
     "            if(event['type'] not in ['ws-exit_to_menu', 'ws-puzzle_complete', 'ws-create_user', 'ws-login_user']): \n",
@@ -154,6 +320,8 @@
     "                    \n",
     "                    #calculate the duration of the event                                                                          \n",
     "                    delta_seconds = (event['time'] - previousEvent['time']).total_seconds()\n",
+    "                    if((delta_seconds < limit)):\n",
+    "                        totalTime[user_puzzle_key] += delta_seconds\n",
     "                    if((delta_seconds < theresHoldActivity)):\n",
     "                        timePuzzle[user_puzzle_key] += delta_seconds\n",
     "\n",
@@ -166,12 +334,6 @@
     "                        \n",
     "            # the puzzle ends        \n",
     "            if(event['type'] in ['ws-exit_to_menu', 'ws-puzzle_complete']):\n",
-    "                    \n",
-    "                    # Total time\n",
-    "                    if(totalTime[user_puzzle_key] == 0):\n",
-    "                        totalTime[user_puzzle_key] = (event['time'] - eventInitial[user_puzzle_key]).total_seconds()\n",
-    "                    else: \n",
-    "                        totalTime[user_puzzle_key] += (event['time'] - eventInitial[user_puzzle_key]).total_seconds()                       \n",
     "                \n",
     "                    puzzleEvents[user_puzzle_key] += 1\n",
     "                    \n",
@@ -180,6 +342,8 @@
     "                    \n",
     "                    #calculate the duration of the event                                                                          \n",
     "                    delta_seconds = (event['time'] - previousEvent['time']).total_seconds()\n",
+    "                    if((delta_seconds < limit)):\n",
+    "                        totalTime[user_puzzle_key] += delta_seconds\n",
     "                    if((delta_seconds < theresHoldActivity)):\n",
     "                        timePuzzle[user_puzzle_key] += delta_seconds\n",
     "                        \n",
@@ -205,7 +369,7 @@
     "    \n",
     "    #data output preparation                                                                                          \n",
     "    activity_by_user = pd.melt(activity_by_user, id_vars=['group', 'user','task_id'], \n",
-    "        value_vars=['timeTotal','inactive_time','event','different_events', 'active_time','ws-snapshot','ws-paint','ws-rotate_view','ws-rotate_shape','ws-move_shape','ws-scale_shape','ws-create_shape','ws-delete_shape','ws-undo_action','ws-redo_action','ws-check_solution'], \n",
+    "        value_vars=['timeTotal','inactive_time','event','different_events', 'active_time','ws-puzzle_started','ws-snapshot','ws-paint','ws-rotate_view','ws-rotate_shape','ws-move_shape','ws-scale_shape','ws-create_shape','ws-delete_shape','ws-undo_action','ws-redo_action','ws-check_solution'], \n",
     "        var_name='metric', value_name='value')\n",
     "        \n",
     "    return activity_by_user"
