Correct time total and inactive time

--- a/notebooks/LevelsOfActivity.ipynb
+++ b/notebooks/LevelsOfActivity.ipynb
@@ -81,7 +81,7 @@
        "      <td>0157bc278747755031338f18c5ba4233</td>\n",
        "      <td>1. One Box</td>\n",
        "      <td>timeTotal</td>\n",
-       "      <td>103.260905</td>\n",
+       "      <td>62.018967</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
@@ -89,7 +89,7 @@
        "      <td>0157bc278747755031338f18c5ba4233</td>\n",
        "      <td>2. Separated Boxes</td>\n",
        "      <td>timeTotal</td>\n",
-       "      <td>215.269197</td>\n",
+       "      <td>110.271236</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
@@ -97,7 +97,7 @@
        "      <td>0157bc278747755031338f18c5ba4233</td>\n",
        "      <td>3. Rotate a Pyramid</td>\n",
        "      <td>timeTotal</td>\n",
-       "      <td>84.300881</td>\n",
+       "      <td>43.318789</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
@@ -105,7 +105,7 @@
        "      <td>0157bc278747755031338f18c5ba4233</td>\n",
        "      <td>4. Match Silhouettes</td>\n",
        "      <td>timeTotal</td>\n",
-       "      <td>998.036919</td>\n",
+       "      <td>821.921867</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
@@ -113,7 +113,7 @@
        "      <td>0157bc278747755031338f18c5ba4233</td>\n",
        "      <td>5. Removing Objects</td>\n",
        "      <td>timeTotal</td>\n",
-       "      <td>237.400799</td>\n",
+       "      <td>124.081586</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>...</td>\n",
@@ -183,11 +183,11 @@
        "74927  e6af7d42084352a39449e6d0a09b18cd  ffa946ca09448817699cabbb3dd78d56   \n",
        "\n",
        "                    task_id             metric       value  \n",
-       "0                1. One Box          timeTotal  103.260905  \n",
-       "1        2. Separated Boxes          timeTotal  215.269197  \n",
-       "2       3. Rotate a Pyramid          timeTotal   84.300881  \n",
-       "3      4. Match Silhouettes          timeTotal  998.036919  \n",
-       "4       5. Removing Objects          timeTotal  237.400799  \n",
+       "0                1. One Box          timeTotal   62.018967  \n",
+       "1        2. Separated Boxes          timeTotal  110.271236  \n",
+       "2       3. Rotate a Pyramid          timeTotal   43.318789  \n",
+       "3      4. Match Silhouettes          timeTotal  821.921867  \n",
+       "4       5. Removing Objects          timeTotal  124.081586  \n",
        "...                     ...                ...         ...  \n",
        "74923           Sugar Cones  ws-check_solution    1.000000  \n",
        "74924        Tall and Small  ws-check_solution    1.000000  \n",
@@ -242,7 +242,7 @@
     "    #indicate the index variable                                                                                                                                                               \n",
     "    activity_by_user.index = activity_by_user['group_user_task_id'].values\n",
     "    \n",
-    "    typeEvents = ['ws-puzzle_started', 'ws-snapshot','ws-paint', 'ws-rotate_view','ws-move_shape','ws-rotate_shape' ,'ws-scale_shape','ws-create_shape','ws-delete_shape','ws-undo_action','ws-redo_action', 'ws-check_solution']\n",
+    "    typeEvents = ['ws-snapshot','ws-paint', 'ws-rotate_view','ws-move_shape','ws-rotate_shape' ,'ws-scale_shape','ws-create_shape','ws-delete_shape','ws-undo_action','ws-redo_action', 'ws-check_solution']\n",
     "    \n",
     "   \n",
     "        \n",
@@ -369,7 +369,7 @@
     "    \n",
     "    #data output preparation                                                                                          \n",
     "    activity_by_user = pd.melt(activity_by_user, id_vars=['group', 'user','task_id'], \n",
-    "        value_vars=['timeTotal','inactive_time','event','different_events', 'active_time','ws-puzzle_started','ws-snapshot','ws-paint','ws-rotate_view','ws-rotate_shape','ws-move_shape','ws-scale_shape','ws-create_shape','ws-delete_shape','ws-undo_action','ws-redo_action','ws-check_solution'], \n",
+    "        value_vars=['timeTotal','inactive_time','event','different_events', 'active_time','ws-snapshot','ws-paint','ws-rotate_view','ws-rotate_shape','ws-move_shape','ws-scale_shape','ws-create_shape','ws-delete_shape','ws-undo_action','ws-redo_action','ws-check_solution'], \n",
     "        var_name='metric', value_name='value')\n",
     "        \n",
     "    return activity_by_user"
