total and inactive time

--- a/notebooks/LevelsOfActivity.ipynb
+++ b/notebooks/LevelsOfActivity.ipynb
@@ -300,7 +300,7 @@
     "                       \n",
     "                # initialize if the id is new                                                                              \n",
     "                if(user_puzzle_key not in puzzleEvents.keys()):\n",
-    "                    totalTime[user_puzzle_key] = 0\n",
+    "                    #totalTime[user_puzzle_key] = 0\n",
     "                    puzzleEvents[user_puzzle_key]= 1\n",
     "                    eventsDiff_puzzle[user_puzzle_key] = []\n",
     "                    eventsDiff_puzzle[user_puzzle_key].append(event['type'])\n",
