Number of puzzles
Tetromino and warm up are the same puzzle but with a different name

--- a/notebooks/Multi-ELO based learner.ipynb
+++ b/notebooks/Multi-ELO based learner.ipynb
@@ -970,7 +970,7 @@
     "                    if(len(ansUserTest[key_split[0]]) > 0): competency_ELO.at[i, 'accuracy'] = str(round(accuracyFunction(ansUserTest[key_split[0]], probUserTest[key_split[0]]), 3)) \n",
     "                    else: competency_ELO.at[i, 'accuracy'] = str(np.nan)                    \n",
     "                    competency_ELO.at[i, 'n_puzzles_attempted'] = len(contPuzzlesUser[key_split[0]])\n",
-    "                    competency_ELO.at[i, 'p_attempted'] = round((len(contPuzzlesUser[key_split[0]]) * 100)/(len(intermediatePuzzles) + len(advancedPuzzles)), 3)\n",
+    "                    competency_ELO.at[i, 'p_attempted'] = round((len(contPuzzlesUser[key_split[0]]) * 100)/((len(intermediatePuzzles) + len(advancedPuzzles))-1), 3)\n",
     "                    competency_ELO.at[i, 'change_competency'] = round(completedPartialData[i]['changeComp'],3)\n",
     "                    competency_ELO.at[i, 'complete_change_comp'] = round(completedPartialData[i]['complete_change_comp'],3)\n",
     "                    #competency_ELO.at[i, 'change_difficulty'] = round(completedPartialData[i]['changeDiff'],3)\n",
@@ -1019,7 +1019,7 @@
     "                else: competency_ELO.at[i, 'accuracy'] = str(np.nan)\n",
     "                competency_ELO.at[i, 'n_puzzles_attempted'] = len(contPuzzlesUser[key_split[1]])\n",
     "                competency_ELO_PCA.at[i, 'n_puzzles_attempted'] = len(contPuzzlesUser[key_split[1]])\n",
-    "                competency_ELO.at[i, 'p_attempted'] = round((len(contPuzzlesUser[key_split[1]]) * 100)/(len(intermediatePuzzles) + len(advancedPuzzles)), 3)\n",
+    "                competency_ELO.at[i, 'p_attempted'] = round((len(contPuzzlesUser[key_split[1]]) * 100)/((len(intermediatePuzzles) + len(advancedPuzzles))-1), 3)\n",
     "            \n",
     "            # Replace NaN values by 0\n",
     "            competency_ELO_PCA['accuracy'] = competency_ELO_PCA['accuracy'].replace(np.nan, 0)\n",
@@ -1050,6 +1050,8 @@
     "            \n",
     "            \n",
     "            return competency_ELO, difficulty_ELO\n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "\n"
